# fhe-transpiler-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convertimg.py  fhecomplr_test.py  openfhe_test.py  pegasus_test.py  py2mlir-affine.py  py2mlir-rmscf.py  py2mlir.py  requirements.txt  setup_dependency.sh  trans-cpp.py
benchmarks/binary/: binary.mlir  binary.py
benchmarks/boxblur/: boxblur.mlir  boxblur.py
benchmarks/robertscross/: robertscross.mlir  robertscross.py
cmake/modules/: CMakeLists.txt  HEIRConfig.cmake.in
fhecomplr/: __init__.py  compiler.py  config.ini  cpp2cc.py  cryptor.py  image.py  py2mlir.py  runner.py  value.py
include/heir/IR/FHE/: HEIR.td  HEIRDialect.h
include/heir/Passes/arith2heir/: LowerArithToHEIR.h
include/heir/Passes/combine/: CombineExtract.h
include/heir/Passes/if2heir/: ReplaceIfWithLut.h
openfhebackend/: CMakeLists.txt
src/IR/FHE/: HEIRDialect.cpp
src/Passes/: CMakeLists.txt
src/Passes/arith2heir/: LowerArithToHEIR.cpp
src/Passes/batching/: Batching.cpp
src/Passes/combine/: CombineExtract.cpp
src/Passes/func2heir/: FuncToHEIR.cpp
src/Passes/heir2emitc/: LowerHEIRToEmitC.cpp
src/Passes/if2heir/: CMakeLists.txt  ReplaceIfWithLut.cpp  ReplaceIfWithLut.td
src/Passes/lwe2rlwe/: LWEToRLWE.cpp
src/Passes/memref2heir/: LowerMemrefToHEIR.cpp
src/Passes/nary/: Nary.cpp
src/Passes/unroll/: UnrollLoop.cpp
src/combine/: CMakeLists.txt  CombineExtract.td
src/tools/: CMakeLists.txt
src/tools/emitc-translate/: emitc-translate.cpp
src/tools/heir_opt/: CMakeLists.txt  heir-opt.cpp
user-server-test/: compile.py  compile.sh  decrypt.sh  encrypt.sh  eval.sh  server-eval.py  user-decrypt.py  user-encrypt.py
